2008-11-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtp.c: (plugin_init):
	* gst/rtp/gstrtpjpegdepay.c: (gst_rtp_jpeg_depay_base_init),
	(gst_rtp_jpeg_depay_class_init), (gst_rtp_jpeg_depay_init),
	(gst_rtp_jpeg_depay_finalize), (MakeTables), (MakeQuantHeader),
	(MakeHuffmanHeader), (MakeDRIHeader), (MakeHeaders),
	(gst_rtp_jpeg_depay_setcaps), (gst_rtp_jpeg_depay_process),
	(gst_rtp_jpeg_depay_change_state),
	(gst_rtp_jpeg_depay_plugin_init):
	* gst/rtp/gstrtpjpegdepay.h:
	Add a jpeg depayloader.

	* gst/rtp/gstrtpjpegpay.c:
	Set the default properties on the payloader to better defaults.

2008-11-14  Stefan Kost  <ensonic@users.sf.net>

	* sys/v4l2/gstv4l2.c:
	  Give it a primary rank for autovideosrc.

2008-11-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Bjorn Ostby <bjornos at axis dot com>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtp.c: (plugin_init):
	* gst/rtp/gstrtpjpegpay.c: (gst_rtp_jpeg_pay_base_init),
	(gst_rtp_jpeg_pay_class_init), (gst_rtp_jpeg_pay_init),
	(gst_rtp_jpeg_pay_setcaps), (gst_rtp_jpeg_pay_header_size),
	(gst_rtp_jpeg_pay_read_quant_table),
	(gst_rtp_jpeg_pay_scan_marker), (gst_rtp_jpeg_pay_handle_buffer),
	(gst_rtp_jpeg_pay_set_property), (gst_rtp_jpeg_pay_get_property),
	(gst_rtp_jpeg_pay_plugin_init):
	* gst/rtp/gstrtpjpegpay.h:
	Add JPEG payloader. Fixes #560756.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Fabricio Godoy <skarllot at gmail dot com>

	* sys/oss/gstosssink.c: (gst_oss_sink_open):
	* sys/oss/gstosssrc.c: (gst_oss_src_open):
	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_get_mmap):
	* sys/v4l2/v4l2_calls.c: (gst_v4l2_fill_lists):
	Fix some spelling mistakes. Fixes #556802.

2008-11-13  Stefan Kost  <ensonic@users.sf.net>

	* gst/equalizer/GstIirEqualizer10Bands.prs:
	* gst/equalizer/GstIirEqualizer3Bands.prs:
	* gst/equalizer/Makefile.am:
	* gst/equalizer/gstiirequalizer10bands.c:
	* gst/equalizer/gstiirequalizer3bands.c: